# tarte-ai

./: .gitignore  CONTRIBUTIONS.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: style.yml
examples/: example_tarte_post-training.ipynb
tarte_ai/: __init__.py  gbdt_bagging_es.py  tarte_boost_tabpfn.py  tarte_boost_xgb.py  tarte_finetune_estimator.py  tarte_gridsearch.py  tarte_preprocess_table.py  tarte_pretrain.py  tarte_utils.py
tarte_ai/src/: __init__.py  gbdt_bagging_es.py  tarte_boost_tabpfn.py  tarte_boost_xgb.py  tarte_estimator_nn.py  tarte_finetune_estimator.py  tarte_model.py  tarte_preprocess_kg.py  tarte_preprocess_table.py  tarte_pretrain.py
